New for 1.65.0
------------------------------------
* Fix discontinuities in ogg page numbers (#1392868)
* Many bug fixes
* Many new bugs

New for 1.64.6
------------------------------------
Mon Mar 30 21:10:13 EDT 2009
* Fix bug which creates corrupted id3v2 tags
* Remove trailing periods for stream name

New for 1.64.5
------------------------------------
Sun Mar  8 12:08:15 EDT 2009
* Change default values for
  - localhost from "localhost" to "127.0.0.1"
  - splitpoint padding from 300 ms to 0 ms
  - metadata and relay codeset (if UTF-8) to ISO-8859-1
  - id3 codeset to UTF-16
  - "keep files in incomplete" from false to true
* Fix parse rules to properly tag artists with "-" in their name (#540543)
* Fix bitrate & metadata reporting in console (#1957248)
* Fix integer overflow on bytes read (#1261305)
* Option for stopping based on megabytes ripped now uses MiB instead of MB
* Support splitting based on empty StreamTitle= strings 2648664

New for 1.64.4
------------------------------------
Mon Feb 16 21:27:29 EST 2009
* Fix problem where corrupt ogg files are being created
* Robustify metadata parsing for Limecast servers
* Fix buffer overflow bug with substitution rules (#2492422)
* Fix file creation bug when "/" is in stream name (#2533980)
* Disable creating cue file for ogg streams
* Fix problem skipping extra track on ogg streams

New for 1.64.3
------------------------------------
Sun Dec 28 20:14:14 EST 2008
* Windows: Fix socket timeout problem
* Fix bug where ogg streams with repeated metadata were being split 
  (#1804582,1953084)

New for 1.64.2
------------------------------------
Mon, Dec 22, 2008
* Windows: Fix packaging error (missing dll)

New for 1.64.1
------------------------------------
Sat, Dec 13, 2008
* Plugin: Streamripper can now load zipped skins
* Plugin: Streamripper skins can be (slightly) configured to use different
  image regions.  This fixes the "extra pixel" bug.