@@ -1,6 +1,7 @@
 New for 1.65.0
 ------------------------------------
 * Fix discontinuities in ogg page numbers (#1392868)
+* Fix bug parsing http header fields in lower case
 * Many bug fixes
 * Many new bugs
 
